# support-bot

./: .gitignore  README.md  app.py  chinook.db  example_agent.ipynb  langgraph.json  music_store_agent.py  package.json  pyproject.toml  requirements.txt  schema.sql  test.ipynb
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.streamlit/: config.toml
music_store_vectors/: chroma.sqlite3
src/: __init__.py
src/agents/: __init__.py  music_store_agent.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  schemas.py
src/tools/: __init__.py  music_tools.py  tools.py
src/utils/: __init__.py  database.py
